# etl-router

./: ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/conveyor-buffer/: Cargo.toml
crates/conveyor-buffer/src/: backpressure.rs  lib.rs  manager.rs  tests.rs
crates/conveyor-config/: Cargo.toml  README.md
crates/conveyor-config/src/: lib.rs
crates/conveyor-dlq/: Cargo.toml  README.md
crates/conveyor-dlq/src/: error.rs  manager.rs  policy.rs  record.rs
crates/conveyor-dsl/: Cargo.toml  README.md
crates/conveyor-dsl/src/: convert.rs  error.rs  lib.rs  manifest.rs  optimizer.rs  parser.rs  registry.rs
crates/conveyor-etl-buffer/: Cargo.toml  README.md
crates/conveyor-etl-buffer/src/: backpressure.rs  manager.rs  tests.rs
crates/conveyor-etl-cli/: Cargo.toml  README.md
crates/conveyor-etl-cli/src/: main.rs  output.rs
crates/conveyor-etl-cli/src/commands/: apply.rs  backup.rs  delete.rs  describe.rs  get.rs  graph.rs  mod.rs  validate.rs
crates/conveyor-etl-cli/src/storage/: gcs.rs  mod.rs  s3.rs
crates/conveyor-etl-config/: Cargo.toml
crates/conveyor-etl-config/src/: settings.rs
crates/conveyor-etl-dlq/: Cargo.toml
crates/conveyor-etl-dlq/src/: lib.rs  manager.rs  record.rs
crates/conveyor-etl-dsl/: Cargo.toml  README.md
crates/conveyor-etl-dsl/src/: convert.rs  lib.rs  manifest.rs  optimizer.rs  registry.rs  types.rs  validation.rs
crates/conveyor-etl-grpc/: Cargo.toml
crates/conveyor-etl-grpc/src/: checkpoint_handler.rs  error.rs  lib.rs  lookup_client.rs  registry_handler.rs  server.rs  sidecar_handler.rs  sink_client.rs  source_handler.rs  transform_client.rs
crates/conveyor-etl-metrics/: Cargo.toml
crates/conveyor-etl-metrics/src/: lib.rs
crates/conveyor-etl-operator/: Cargo.toml  Dockerfile  README.md
crates/conveyor-etl-proto/: Cargo.toml  README.md
crates/conveyor-etl-proto/proto/: backup.proto  checkpoint.proto  common.proto  lookup.proto  raft.proto  registry.proto  router.proto  sidecar.proto  sink.proto  source.proto  transform.proto
crates/conveyor-etl-raft/: Cargo.toml
crates/conveyor-etl-registry/: Cargo.toml  README.md
crates/conveyor-etl-registry/src/: service_registry.rs  tests.rs
crates/conveyor-etl-router/: Cargo.toml  README.md
crates/conveyor-etl-router/src/: main.rs
crates/conveyor-etl-routing/: Cargo.toml  README.md
crates/conveyor-etl-routing/src/: dag.rs  engine.rs  matcher.rs  tests.rs
crates/conveyor-etl-sidecar/: Cargo.toml  README.md
crates/conveyor-graphql/: Cargo.toml  README.md
crates/conveyor-grpc/: Cargo.toml  README.md
crates/conveyor-grpc/src/: checkpoint_handler.rs  error.rs  lib.rs  lookup_client.rs  registry_handler.rs  server.rs  sidecar_handler.rs  sink_client.rs  source_handler.rs  tests.rs  transform_client.rs
crates/conveyor-metrics/: Cargo.toml  README.md
crates/conveyor-operator/: Cargo.toml  Dockerfile  README.md
crates/conveyor-operator/deploy/: kustomization.yaml
crates/conveyor-operator/deploy/crds/: crds.yaml
crates/conveyor-operator/deploy/examples/: cluster.yaml  pipeline.yaml
crates/conveyor-operator/deploy/helm/etl-operator/: Chart.yaml  values.yaml
crates/conveyor-operator/deploy/helm/etl-operator/templates/: NOTES.txt  _helpers.tpl  crds.yaml  deployment.yaml  rbac.yaml  serviceaccount.yaml
crates/conveyor-operator/deploy/operator/: deployment.yaml  namespace.yaml  rbac.yaml  serviceaccount.yaml
crates/conveyor-operator/src/: lib.rs  main.rs
crates/conveyor-operator/src/controller/: mod.rs  pipeline_controller.rs  sink_controller.rs  source_controller.rs
crates/conveyor-operator/src/crd/: cluster.rs  mod.rs  pipeline.rs  sink.rs  source.rs  transform.rs
crates/conveyor-operator/src/grpc/: client.rs  mod.rs
crates/conveyor-proto/: Cargo.toml  build.rs
crates/conveyor-raft/: Cargo.toml  README.md
crates/conveyor-raft/src/: backup_service.rs  commands.rs  core.rs  lib.rs  network.rs  node.rs  state_machine.rs  storage.rs  testing.rs  tests.rs  transport.rs
crates/conveyor-raft/src/core/: mod.rs  replication.rs
crates/conveyor-registry/: Cargo.toml
crates/conveyor-registry/src/: group_coordinator.rs  lib.rs  service_registry.rs  tests.rs
crates/conveyor-router/: Cargo.toml  README.md
crates/conveyor-router/src/: main.rs
crates/conveyor-routing/: Cargo.toml
crates/conveyor-routing/src/: dag.rs  engine.rs  lib.rs  matcher.rs  tests.rs  watermark.rs
crates/conveyor-sidecar/: Cargo.toml
crates/conveyor-sidecar/src/: data_plane.rs  lib.rs  main.rs
crates/conveyor-sidecar/src/cluster_client/: conversions.rs  heartbeat.rs  registration.rs
crates/conveyor-sidecar/src/discovery/: mod.rs
crates/conveyor-sidecar/src/routing/: client_pool.rs  local_router.rs  mod.rs  remote_router.rs  routing_table.rs
crates/conveyorctl/: Cargo.toml  README.md
crates/conveyorctl/src/commands/: apply.rs  backup.rs  delete.rs  describe.rs  get.rs  graph.rs  validate.rs
crates/conveyorctl/src/storage/: file.rs
crates/etl-buffer/: Cargo.toml  README.md
crates/etl-buffer/src/: manager.rs
crates/etl-config/: README.md
crates/etl-dlq/: Cargo.toml  README.md
crates/etl-dsl/: README.md
crates/etl-graphql/: Cargo.toml  README.md
crates/etl-graphql/src/: error_buffer.rs  resolvers.rs  server.rs  types.rs
crates/etl-grpc/: README.md
crates/etl-metrics/: README.md
crates/etl-operator/: Cargo.toml  README.md
crates/etl-operator/src/: error.rs  lib.rs  main.rs
crates/etl-operator/src/controller/: cluster_controller.rs  pipeline_controller.rs  sink_controller.rs  source_controller.rs  transform_controller.rs
crates/etl-operator/src/crd/: cluster.rs  mod.rs  pipeline.rs  sink.rs  source.rs  transform.rs
crates/etl-operator/src/grpc/: client.rs
crates/etl-proto/: README.md
crates/etl-raft/: README.md
crates/etl-registry/: Cargo.toml  README.md
crates/etl-registry/src/: load_balancer.rs
crates/etl-router/: README.md
crates/etl-routing/: README.md
crates/etl-sidecar/: Cargo.toml  README.md
crates/etl-sidecar/src/routing/: remote_router.rs
crates/etlctl/: README.md
web/: README.md
(+83 files in other folders)
