[workspace]
resolver = "2"
members = [
    "crates/conveyor-etl-proto",
    "crates/conveyor-etl-config",
    "crates/conveyor-etl-raft",
    "crates/conveyor-etl-registry",
    "crates/conveyor-etl-buffer",
    "crates/conveyor-etl-routing",
    "crates/conveyor-etl-metrics",
    "crates/conveyor-etl-grpc",
    "crates/conveyor-etl-dsl",
    "crates/conveyor-etl-dlq",
    "crates/conveyor-etl-router",
    "crates/conveyor-etl-cli",
    "crates/conveyor-etl-operator",
    "crates/conveyor-etl-sidecar",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Conveyor Team"]
license = "MIT"

[workspace.dependencies]
# Internal crates
conveyor-etl-proto = { version = "0.1.0", path = "crates/conveyor-etl-proto" }
conveyor-etl-config = { version = "0.1.0", path = "crates/conveyor-etl-config" }
conveyor-etl-raft = { version = "0.1.0", path = "crates/conveyor-etl-raft" }
conveyor-etl-registry = { version = "0.1.0", path = "crates/conveyor-etl-registry" }
conveyor-etl-buffer = { version = "0.1.0", path = "crates/conveyor-etl-buffer" }
conveyor-etl-routing = { version = "0.1.0", path = "crates/conveyor-etl-routing" }
conveyor-etl-metrics = { version = "0.1.0", path = "crates/conveyor-etl-metrics" }
conveyor-etl-grpc = { version = "0.1.0", path = "crates/conveyor-etl-grpc" }
conveyor-etl-dsl = { version = "0.1.0", path = "crates/conveyor-etl-dsl" }
conveyor-etl-dlq = { version = "0.1.0", path = "crates/conveyor-etl-dlq" }
conveyor-etl-cli = { version = "0.1.0", path = "crates/conveyor-etl-cli" }
conveyor-etl-operator = { version = "0.1.0", path = "crates/conveyor-etl-operator" }
conveyor-etl-sidecar = { version = "0.1.0", path = "crates/conveyor-etl-sidecar" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"

# gRPC
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Storage
rocksdb = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Config
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
parking_lot = "0.12"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
dashmap = "6"

# HTTP
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"


# Compression
tar = "0.4"
flate2 = "1"
zstd = "0.13"

# Testing
tempfile = "3"

# Kubernetes
kube = { version = "0.96", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }
schemars = "0.8"
futures = "0.3"
