[package]
name = "conveyor-buffer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Buffer management and backpressure for Conveyor"

[dependencies]
conveyor-proto.workspace = true
conveyor-config.workspace = true

tokio.workspace = true
serde.workspace = true
tracing.workspace = true
anyhow.workspace = true
dashmap.workspace = true
