[package]
name = "conveyor-dlq"
version = "0.1.0"
edition = "2021"

[dependencies]
conveyor-proto = { path = "../conveyor-proto" }
conveyor-config = { path = "../conveyor-config" }

tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost-types = "0.13"
dashmap = "6"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
