[package]
name = "conveyor-dsl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "YAML DSL parser for Conveyor pipeline definitions"

[dependencies]
conveyor-routing.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
schemars = "0.8"
anyhow.workspace = true
thiserror = "1.0"
