[package]
name = "conveyor-etl-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Configuration management for Conveyor ETL"

[dependencies]
config.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
