[package]
name = "conveyor-etl-dlq"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Dead letter queue for Conveyor ETL"

[dependencies]
conveyor-etl-proto.workspace = true
conveyor-etl-config.workspace = true

tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
prost-types.workspace = true
dashmap.workspace = true

[dev-dependencies]
tokio.workspace = true
