[package]
name = "conveyor-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Service registry and consumer group coordination for Conveyor"

[dependencies]
conveyor-raft.workspace = true

tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
rand.workspace = true
dashmap.workspace = true
