[package]
name = "conveyor-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-availability Conveyor routing layer with Raft consensus"

[[bin]]
name = "conveyor-router"
path = "src/main.rs"

[dependencies]
conveyor-config.workspace = true
conveyor-grpc.workspace = true

tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
