[package]
name = "etl-graphql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GraphQL API for ETL Router"

[dependencies]
etl-raft.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid = { version = "1.0", features = ["v4"] }
