[package]
name = "etl-sidecar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ETL Router sidecar for local and cross-pod data routing"

[[bin]]
name = "etl-sidecar"
path = "src/main.rs"

[dependencies]
# Workspace internal crates
etl-proto.workspace = true
etl-routing.workspace = true
etl-buffer.workspace = true

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true

# gRPC
tonic.workspace = true
tonic-reflection = "0.12"
prost.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utils
clap.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true

[dev-dependencies]
tempfile.workspace = true
